[gd_scene load_steps=10 format=2]

[ext_resource path="res://turrets/animation/plasma/plasma_level_1_anim.tres" type="SpriteFrames" id=1]
[ext_resource path="res://turrets/Turret.gd" type="Script" id=2]
[ext_resource path="res://turrets/animation/plasma/plasma_level_2_anim.tres" type="SpriteFrames" id=3]
[ext_resource path="res://turrets/Upgrade_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://turrets/animation/plasma/plasma_level_0_anim.tres" type="SpriteFrames" id=5]
[ext_resource path="res://turrets/animation/plasma/plasma_level_3_anim.tres" type="SpriteFrames" id=6]
[ext_resource path="res://turrets/img/towers_walls_blank.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 22 )

[node name="Plasma_turret" type="Node2D"]
script = ExtResource( 2 )
attack_force = 20.0
attack_type = 1
reload_time = 2.0
animation_sprites = [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ) ]
frame_for_shoot = 6

[node name="Watch_radius" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Watch_radius"]
shape = SubResource( 1 )

[node name="Turret_base" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )

[node name="Turret_gun" type="Node2D" parent="."]

[node name="Animation" type="AnimatedSprite" parent="Turret_gun"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 5 )
animation = "shoot"
speed_scale = 2.0

[node name="Reloading_timer" type="Timer" parent="."]
one_shot = true

[node name="Upgrade_menu" parent="." instance=ExtResource( 4 )]

[node name="Upg_menu_button" type="TouchScreenButton" parent="."]
position = Vector2( -22, -22 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Watch_radius" to="." method="_on_Watch_radius_area_entered"]
[connection signal="area_exited" from="Watch_radius" to="." method="_on_Watch_radius_area_exited"]
[connection signal="animation_finished" from="Turret_gun/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Reloading_timer" to="." method="_on_Reloading_timer_timeout"]
[connection signal="pressed" from="Upg_menu_button" to="." method="_on_Upg_menu_button_pressed"]
